--- a/index.html
+++ b/index.html
@@ -5,31 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emre KARDAS Resume</title>
-    <style>
-        .skills-1{
-            border-spacing: 1em;
-            border-right: 1px solid #000; height: 1em;
-        }
-        .skills-2{
-            border-spacing: 1em;
-        }
-        .certificates-1{
-            border-spacing: 1em;
-            border-right: 1px solid #000; height: 1em;
-        }
-        .certificates-2{
-            border-spacing: 1em;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1 style="text-align:center ;">Resume</h1>
     <table cellspacing="20">
         <tr>
             <td><img src="./images/emre.png" alt="emre profile picture" width="200" height="200"></td>
             <td>
                 <h1>Emre KARDAŞ</h1>
-                <p><em>JR Developer</em></p>
+                <p><em>JR Web Developer</em></p>
                 <p>My name is Emre KARDAŞ and I was born in Kayseri in 1999. I graduated from Yeditepe University with a 
                     bachelor's degree <br> in Information Systems and Technologies. I have been training as a back-end developer and 
                     front-end developer separately <br> during my education life. In my working life, I continue my way as a full-stack 
@@ -79,21 +64,21 @@
         <table class="skills-1">
           <tbody>
           <tr>
-            <td>C++</td>
+            <td> <strong>C++</strong> </td>
             <td>Moderate</td>
           </tr>
-            <td>C</td>
+            <td><strong>C</strong></td>
             <td>Good</td>
           </tr>
-            <td>C#</td>
+            <td><strong>C#</strong></td>
             <td>Moderate</td>
           </tr>
           </tr>
-            <td>Python</td>
+            <td><strong>Python</strong></td>
             <td>Good</td>
           </tr>
           </tr>
-            <td>Java</td>
+            <td><strong>Java</strong></td>
             <td>Good</td>
           </tr>
         </tbody>
@@ -103,21 +88,21 @@
         <table class="skills-2">
           <tbody>
           <tr>
-            <td>HTML</td>
+            <td><strong>HTML</strong></td>
             <td>Very Good</td>
           </tr>
-            <td>CSS</td>
+            <td><strong>CSS</strong></td>
             <td>Very Good</td>
           </tr>
-            <td>Boostrap</td>
+            <td><strong>Boostrap</strong></td>
             <td>Good</td>
           </tr>
           </tr>
-            <td>Vue.js</td>
+            <td><strong>Vue.js</strong></td>
             <td>Good</td>
           </tr>
           </tr>
-            <td>PHP</td>
+            <td><strong>PHP</strong></td>
             <td>Good</td>
           </tr>
         </tbody>
