--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       
       <strong>Engin KANDIRAN</strong><br>
       <em>Yeditepe University</em>
-      <p>+90 542 607 75 87, erhan.tumsa@yeditepe.edu.tr</p><br>
+      <p>+90 542 607 75 87, engin.kandiran@yeditepe.edu.tr</p><br>
       
       <strong>Barış YALÇINKAYA</strong><br>
       <em>Yeditepe University</em>
